--- a/URL_Shortener.API/URL_Shortener.API.csproj
+++ b/URL_Shortener.API/URL_Shortener.API.csproj
@@ -1,9 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>aspnet-URL_Shortener.API-44b298d2-97fa-427e-8a3c-69f17a8289ef</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,6 +16,11 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\URL_Shortener.BLL\URL_Shortener.BLL.csproj" />
+    <ProjectReference Include="..\URL_Shortener.DAL\URL_Shortener.DAL.csproj" />
   </ItemGroup>
 
 </Project>
