JWT Tokens Authorization implemented

--- a/URL_Shortener/URL_Shortener.Server/appsettings.json
+++ b/URL_Shortener/URL_Shortener.Server/appsettings.json
@@ -1,12 +1,21 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=ShortenerDB;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=ShortenerDB;Trusted_Connection=True;"
+    },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
+    "JwtConfig": {
+        "validIssuer": "https://localhost:5142/",
+        "validAudience": "https://localhost:7498/",
+        "validAudienceFront": "https://localhost:7498/",
+        "validAudienceBack": "https://localhost:7214/",
+        "secret": "WXJSAMFKLSTEHSYOVWXJSAMFKLSTEHSYOV",
+        "expiresIn": 10,
+        "RefreshTokenValidityInDays": 7
+    },
   "AllowedHosts": "*"
 }
