--- a/URL_Shortener/url_shortener.client/package.json
+++ b/URL_Shortener/url_shortener.client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "url-shortener.client",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "run-script-os",
@@ -14,24 +14,37 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^19.1.0",
+    "@angular/cli": "^19.1.4",
     "@angular/common": "^19.1.0",
-    "@angular/compiler": "^19.1.0",
+    "@angular/compiler": "^19.1.3",
     "@angular/core": "^19.1.0",
     "@angular/forms": "^19.1.0",
+    "@angular/material": "^19.1.1",
     "@angular/platform-browser": "^19.1.0",
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
+    "@ng-select/ng-select": "^14.2.0",
+    "@siemens/ngx-datatable": "^22.4.1",
+    "bootstrap": "^5.3.3",
+    "bootswatch": "^5.3.3",
+    "chart.js": "^4.4.6",
+    "font-awesome": "^4.7.0",
     "jest-editor-support": "*",
+    "jquery": "^3.7.1",
+    "ngx-toasta": "^4.0.0",
     "run-script-os": "*",
     "rxjs": "~7.8.0",
+    "sass": "^1.83.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.1.3",
     "@angular/cli": "^19.1.3",
-    "@angular/compiler-cli": "^19.1.0",
+    "@angular/compiler-cli": "^19.1.3",
+    "@types/bootstrap": "^5.2.10",
     "@types/jasmine": "~5.1.0",
+    "@types/jquery": "^3.5.32",
     "eslint": "^9.18.0",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
