--- a/URL_Shortener/url_shortener.client/angular.json
+++ b/URL_Shortener/url_shortener.client/angular.json
@@ -39,7 +39,10 @@
             "styles": [
               "src/styles.scss",
               "node_modules/bootstrap/scss/bootstrap.scss",
-              "node_modules/ngx-toasta/styles/style-bootstrap.css"
+              "node_modules/ngx-toasta/styles/style-bootstrap.css",
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeng/resources/themes/nova-light/theme.css",
+              "node_modules/primeng/resources/primeng.min.css"
             ],
             "stylePreprocessorOptions": {
               "includePaths": [
