--- a/URL_Shortener/url_shortener.client/package.json
+++ b/URL_Shortener/url_shortener.client/package.json
@@ -32,6 +32,7 @@
     "jest-editor-support": "*",
     "jquery": "^3.7.1",
     "ngx-toasta": "^4.0.0",
+    "primeicons": "^7.0.0",
     "primeng": "^19.0.5",
     "run-script-os": "*",
     "rxjs": "~7.8.0",
